--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@auth0/angular-jwt": "^3.0.1",
     "alertifyjs": "^1.12.0",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
