--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^3.0.1",
     "alertifyjs": "^1.12.0",
     "bootstrap": "^4.3.1",
+    "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
