using cloudinary as our photo storage solution

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
         "Default": "Warning"
       }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "CloudinarySettings": {
+      "CloudName": "dtsixobqw",
+      "ApiKey":"516955699357299",
+      "ApiSecret":"mrzyNC_QQhqJqrYXH7Im6t4EdJw"
+    }
   }
