migrated to MySqlServer(mariadb)

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
       "Token": "Super secret key"
     },
     "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost; Database=datingapp; Uid=appuser; Pwd=password"
+      "DefaultConnection": "Server=localhost; Database=datingapp; Port=8889; Uid=appuser; Pwd=password"
     },
     "Logging": {
       "LogLevel": {
