--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.8",
     "@auth0/angular-jwt": "^3.0.1",
     "alertifyjs": "^1.12.0",
+    "angular2-logger": "^0.7.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
